2009-02-10  Michael Meeks  <michael.meeks@novell.com>

	* backends/markup-tree.c (write_value_element): close empty
	value elements immediately to save parsing time.

	* backends/markup-tree.c: instead of indenting with spaces, use
	tabs for a 50% size saving in the generated XML, and a nice
	parsing speedup. Also accelerate writing by avoiding lots of
	un-necessary memory allocation.

2009-01-27  Tor Lillqvist  <tml@novell.com>

	* gconf/Makefile.am (gconfd_2_LDFLAGS): Use the -mwindows flag
	when linking on Windows, so that we build a "GUI" executable.

	* gconf/gconfd.c (main): On Windows, with GCONF_DEBUG_OUTPUT set,
	make sure stdout and stderr go somewhere. Use the parent's console
	window if possible, otherwise open an own console window. If we
	had to open an own console window, give the user a chance to read
	the output when exiting. Same idea that has been successfully used
	in GIMP for a while.

2009-01-23  Vincent Untz  <vuntz@gnome.org>

	* backends/xml-backend.c: cygwin needs the same stuff as mingw, so use
	G_PLATFORM_WIN32
	Patch by <yselkowitz@users.sourceforge.net>
	Fix bug #563801.

2009-01-23  Vincent Untz  <vuntz@gnome.org>

	* gconf/gconftool.c: (do_toggle): return value at the end of the
	function.
	Patch by Magnus Boman <captain.magnus@gmail.com>. Fix bug #567334

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

=========================== 2.25.0 ===========================

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	Bug 560559 – GNOME Goal: Remove deprecated GLib symbols

	* gconf/testclient.c: Replace deprecated GLib calls. Patch by
	Travis Veralrud.

	* gconf/Makefile.am: Remove commented-out mentions of testclient.c

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 565297 – a --toggle option for gconftool

	* gconf/gconftool.c: Add --toggle option

2008-12-08  Ray Strode  <rstrode@redhat.com>
